test/expected/diag_use_before_assignment.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "$count"]
  [CompoundListCondition, None]
    [Assign count=5]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "$count"]
[Word
  Unquoted "echo"
]
[Word
  Variable "count"
]
[Word
  Unquoted "count=5"
]
[Word
  Unquoted "echo"
]
[Word
  Variable "count"
]
shit: 2:6: error: The variable 'count' is read before it is assigned.
     2 |  echo "$count"
       |       ^~~~~~~~ here.
[Code 1]
